--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ python:
   - "2.7"
 # command to run tests
 script:
-  - python tests.py
-  - python test_HTMLTestRunner.py
+  - python test/tests.py
+  - python test/test_HTMLTestRunner.py
